--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -64,12 +64,10 @@ option.BLOOM_ENABLE = Enable Bloom
 option.BLOOM_ENABLE.comment = Enable or disable the bloom effect. §cNo performance impact!§r
     value.BLOOM_ENABLE.0 = off
     value.BLOOM_ENABLE.1 = on
-option.BLOOM_INTENSITY = Bloom Exposure
-option.BLOOM_INTENSITY.comment = How strong the bloom effect will be. §cNo performance impact!§r
-option.BLOOM_STRENGTH = Bloom Strength
-option.BLOOM_STRENGTH.comment = Adjust the weighting of the bloom effect §cNo performance impact!§r
 option.BLOOM_RADIUS = Bloom Radius
-option.BLOOM_RADIUS.comment = How large the radius of the bloom effect will be §cNOTE: BLOOM LACKS SMOOTHING, LARGER RADIUS COULD LOOK STRANGE DEPENDING ON THE SITUATION!§r
+option.BLOOM_RADIUS.comment = How large the radius of the bloom effect will be§r
+option.BLOOM_QUALITY = Bloom Quality
+option.BLOOM_RADIUS.comment = Quality of the bloom filter§r
 
 option.EMISSIVE_MULTIPLIER = Emission Multiplier
 option.EMISSIVE_MULTIPLIER.comment = How much to multiply the strength of emissives by
