--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -74,3 +74,5 @@ option.BINARY_REFINEMENT = SSR Mode
 option.BINARY_REFINEMENT.comment = choose quality or performance SSR 
     value.BINARY_REFINEMENT.0 = Performance
     value.BINARY_REFINEMENT.1 = Quality
+
+option.SSS_INTENSITY = SSS Intensity
