idek where to begin

--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -89,3 +89,64 @@ option.ROUGH_REFLECTION = Rough Reflections
 option.ROUGH_REFLECTION.comment = Enables the use of roughness varied rough reflections §3Will introduce noise
 
 option.PIXELATED_LIGHTING = Pixel Locked Lighting
+
+option.ABSORPTION_R = Red Absorption
+option.ABSORPTION_G = Green Absorption
+option.ABSORPTION_B = Blue Absorption
+    suffix.ABSORPTION_R = %
+    suffix.ABSORPTION_G = %
+    suffix.ABSORPTION_B = %
+
+option.SCATTER_R = Red Scattering
+option.SCATTER_G = Green Scattering
+option.SCATTER_B = Blue Scattering
+    suffix.SCATTER_R = %
+    suffix.SCATTER_G = %
+    suffix.SCATTER_B = %
+    
+option.SCATTER_COEFF = Scattering Amount
+option.ABSORPTION_COEFF = Absorption Amount
+
+option.RAYLEIGH_COEFF = Rayleigh Coefficient
+option.SUN_SIZE = Sun Size
+
+option.DO_CLOUDS = Clouds
+    value.DO_CLOUDS.0 = Off
+    value.DO_CLOUDS.1 = Vanilla
+
+option.AIR_FOG_DENSITY = Fog Density
+option.SUN_FOG_DENSITY = Sun Fog Density
+
+option.GABSORB_R = Red Absorption
+option.GABSORB_G = Green Absorption
+option.GABSORB_B = Blue Absoprtion
+    suffix.GABSORB_R = %
+    suffix.GABSORB_G = %
+    suffix.GABSORB_B = %
+
+option.DAY_ZEN_R = Zenith Red
+option.DAY_ZEN_G = Zenith Green
+option.DAY_ZEN_B = Zenith Blue
+
+option.DAY_HOR_R = Horizon Red
+option.DAY_HOR_G = Horizon Green
+option.DAY_HOR_B = Horizon Blue
+
+option.DAWN_ZEN_R = Zenith Red
+option.DAWN_ZEN_G = Zenith Green
+option.DAWN_ZEN_B = Zenith Blue
+
+option.DAWN_HOR_R = Horizon Red
+option.DAWN_HOR_G = Horizon Green
+option.DAWN_HOR_B = Horizon Blue
+
+option.DUSK_ZEN_R = Zenith Red
+option.DUSK_ZEN_G = Zenith Green
+option.DUSK_ZEN_B = Zenith Blue
+
+option.DUSK_HOR_R = Horizon Red
+option.DUSK_HOR_G = Horizon Green
+option.DUSK_HOR_B = Horizon Blue
+
+option.BLOOM_RADIUS = Bloom Radius 
+option.BLOOM_QUALITY = Bloom Quality
