--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -33,6 +33,7 @@ option.VOLUMETRIC_LIGHTING = Volumetric Lighting
 option.VOLUMETRIC_LIGHTING.comment = Enables either screenspace godrays effect or Volumetric Fog §chigh performance impact§r
 value.VOLUMETRIC_LIGHTING.0  = off
 value.VOLUMETRIC_LIGHTING.1  = Screenspace
+value.VOLUMETRIC_LIGHTING.2 = Volumetric
 option.GODRAYS_SAMPLES = Godray sample count
 option.GODRAYS_SAMPLES.comment = Increase the quality of godrays. §cPotentially major performance impact§r
 option.GODRAY_DENSITY = Godrays Density
@@ -181,3 +182,14 @@ option.DH_SUPPORT = Distant Horizons Support
     value.DH_SUPPORT.1 = On
 
 option.WAVES = Water Waves
+option.DO_VL_PCF = Volumetric shadow filtering
+option.DO_VL_PCF.comment = Enable filtering for volumetrics §cHigh performance cost!§r
+value.DO_VL_PCF.0 = Off
+value.DO_VL_PCF.1 = On
+
+option.VOLUMETRIC_MIN_HEIGHT = Density fade start
+option.VOLUMETRIC_MAX_HEIGHT = Density fade end
+option.DO_FOG_HEIGHT = Height Based Fog
+option.DO_FOG_HEIGHT.comment = Use height parameters for volumetrics rather than being uniform
+option.VOLUETRIC_FOG_DENSITY = Volumetric Fog Density
+option.VL_ANISO = Volumetric Fog Anisotropy
