improved VL, rough reflections and sky stuffs

--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -191,5 +191,9 @@ option.VOLUMETRIC_MIN_HEIGHT = Density fade start
 option.VOLUMETRIC_MAX_HEIGHT = Density fade end
 option.DO_FOG_HEIGHT = Height Based Fog
 option.DO_FOG_HEIGHT.comment = Use height parameters for volumetrics rather than being uniform
-option.VOLUETRIC_FOG_DENSITY = Volumetric Fog Density
+option.VOLUETRIC_FOG_DENSITY = Volumetric Fog Extinction
 option.VL_ANISO = Volumetric Fog Anisotropy
+option.VL_ANISO_BACK = Volumetric Backscattering Anisotropy
+option.ZENITH_BLEND = Zenith Blend Point
+option.HORIZON_BLEND = Horizon Blend Point
+option.GROUND_BLEND = Ground Blend Point
