--- a/shaders/lang/en_us.lang
+++ b/shaders/lang/en_us.lang
@@ -146,4 +146,17 @@ option.SCREENSHOT_MODE.comment = Enable strong accumulation for maximum denoisin
     value.SCREENSHOT_MODE.1 = On
     value.SCREENSHOT_MODE.2 = Hell
 
-option.ENVIORNMENT_FOG = Enviornment fog
+option.ADVANCED_FOG_TRACING = High Quality Volumetric Fog
+    
+option.FOG_DENSITY = Fog Density
+option.WEATHER_DENSITY = Weather Fog Density
+option.TRACING_DISTANCE = Max Fog Distance
+option.MS_FALLOFF = Multiple Scattering Decay
+option.MS_POWER = Multiple Scattering Power
+option.STBN_SAMPLES = Blue Noise Samples
+option.STEP_SIZE = Fog Step Size
+option.STEP_SIZE.comment = Determines the overall quality of the fog (lower size = higher quality but worse performance)
+option.NOISE_SAMPLING = Non-Uniform Fog
+option.NOISE_SAMPLING.common = Enables a 2D noise map for varying density (very buggy)
+
+
